fix: broken css and responsive video

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1931,10 +1931,3 @@
 			}
 		}
 	}
-
-@include breakpoint('<=small') {
-    .spotlight .image iframe {
-        width: 100% !important;
-        height: auto !important;
-    }
-}
